k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopeasy-frontend
  namespace: shopeasy
  labels:
    app: shopeasy-frontend
spec:
  type: ClusterIP
  selector:
    app: shopeasy-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
