k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopeasy-ingress
  namespace: shopeasy
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
    alb.ingress.kubernetes.io/wafv2-acl-arn: WAF_ACL_ARN_PLACEHOLDER
    alb.ingress.kubernetes.io/security-groups: ALB_SG_ID_PLACEHOLDER
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
    alb.ingress.kubernetes.io/tags: Environment=dev,Project=shopeasy
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: shopeasy-api
                port:
                  number: 80
          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: shopeasy-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopeasy-frontend
                port:
                  number: 80
